--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
----
-layout: post
-title: 'nostr.spa - privacy-oriented nostr web client'
-title_short: 'nostr.spa'
-description: 'Privacy-oriented nostr web client'
----
-
-<link rel="stylesheet" href="dist/main.css" />
-
-<div id="app">
-  <noscript>
-    <div class="noscript">
-      <p>This demo requires JavaScript to function properly.</p>
-      <p>Please enable JavaScript in your browser and reload the page.</p>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>nostr.spa - privacy-oriented nostr web client</title>
+    <meta name="description" content="Privacy-oriented nostr web client" />
+    <link rel="manifest" href="/app.webmanifest" />
+  </head>
+  <body>
+    <div id="app">
+      <noscript>
+        <div class="noscript">
+          <p>This demo requires JavaScript to function properly.</p>
+          <p>Please enable JavaScript in your browser and reload the page.</p>
+        </div>
+      </noscript>
     </div>
-  </noscript>
-</div>
+    <script type="module" src="./src/main.ts"></script>
+  </body>
+</html>
+
 <style>
   .noscript {
     text-align: center;
@@ -26,7 +32,6 @@ description: 'Privacy-oriented nostr web client'
 
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('serviceworker.js')
+    navigator.serviceWorker.register('serviceworker.js');
   }
 </script>
-<script type="module" src="dist/main.js"></script>
